Add code for images and rename create-certs image.

--- a/k8s/create-certs.yaml
+++ b/k8s/create-certs.yaml
@@ -10,5 +10,5 @@ spec:
       restartPolicy: OnFailure
       containers:
         - name: create-certs
-          image: amouat/kubectl
+          image: amouat/create-certs
           imagePullPolicy: Always
