--- a/images/create_certs/Dockerfile
+++ b/images/create_certs/Dockerfile
@@ -1,10 +1,11 @@
 FROM debian:jessie
 
 RUN apt-get update && export TERM=xterm && \
-    apt-get install -y --no-install-recommends openssl \
+    apt-get install -y openssl curl \
     && rm -rf /var/lib/apt/lists/*
 
-COPY kubectl /usr/local/bin/kubectl
+RUN curl -o /usr/local/bin/kubectl -sSL https://storage.googleapis.com/kubernetes-release/release/v1.3.4/bin/linux/amd64/kubectl
+RUN chmod +x /usr/local/bin/kubectl
 
 COPY create_certs.sh /
 COPY in.req /
