Fix job name bug and multi-job parsing.
 - now uses metadata.uid as copy-certs job name to avoid illegal job
   names
 - added extra new line in template code to fix bug where multiple jobs
   not deleted.

--- a/k8s/copy-certs-templ.yaml
+++ b/k8s/copy-certs-templ.yaml
@@ -2,15 +2,15 @@
 kind: Job
 apiVersion: batch/v1
 metadata:
-  name: copy-certs-{{.metadata.name}}
+  name: copy-certs-{{.metadata.uid}}
 spec:
   template:
     metadata:
-      name: copy-certs-{{.metadata.name}}
+      name: copy-certs-{{.metadata.uid}}
     spec:
       restartPolicy: OnFailure
       containers:
-        - name: copy-certs-{{.metadata.name}}
+        - name: copy-certs-{{.metadata.uid}}
           image: amouat/copy-certs
           imagePullPolicy: Always
           volumeMounts:
@@ -28,6 +28,6 @@ spec:
           hostPath: 
             path: /etc/hosts
       nodeSelector: 
-        kubernetes.io/hostname: {{.metadata.name}}
+        kubernetes.io/hostname: "{{.metadata.name}}"
 ---
 {{end}}{{end}}
