--- a/images/create_certs/Dockerfile
+++ b/images/create_certs/Dockerfile
@@ -4,7 +4,10 @@ RUN apt-get update && export TERM=xterm && \
     apt-get install -y openssl curl \
     && rm -rf /var/lib/apt/lists/*
 
-RUN curl -o /usr/local/bin/kubectl -sSL https://storage.googleapis.com/kubernetes-release/release/v1.3.4/bin/linux/amd64/kubectl
+# This should download the latest stable version of kubectl
+# It's not great from a provenance pov, but it's basically the same as the
+# official instructions
+RUN curl -o /usr/local/bin/kubectl -sSL https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
 RUN chmod +x /usr/local/bin/kubectl
 
 COPY create_certs.sh /
