Use automated builds.

--- a/k8s/create-certs.yaml
+++ b/k8s/create-certs.yaml
@@ -10,5 +10,5 @@ spec:
       restartPolicy: OnFailure
       containers:
         - name: create-certs
-          image: amouat/create-certs
+          image: amouat/create-certs-auto
           imagePullPolicy: Always
