--- a/k8s/copy-certs-templ.yaml
+++ b/k8s/copy-certs-templ.yaml
@@ -11,7 +11,7 @@ spec:
       restartPolicy: OnFailure
       containers:
         - name: copy-certs-{{.metadata.uid}}
-          image: amouat/copy-certs
+          image: amouat/copy-certs-auto
           imagePullPolicy: Always
           volumeMounts:
             - mountPath: /etc/docker
