--- a/k8s/copy-certs.yaml
+++ b/k8s/copy-certs.yaml
@@ -10,7 +10,7 @@ spec:
       restartPolicy: OnFailure
       containers:
         - name: copy-certs
-          image: amouat/copy-certs
+          image: amouat/copy-certs-auto
           imagePullPolicy: Always
           volumeMounts:
             - mountPath: /etc/docker
