Add RBAC to allow jobs to manipulate secrets

--- a/k8s/copy-certs-templ.yaml
+++ b/k8s/copy-certs-templ.yaml
@@ -9,6 +9,7 @@ spec:
       name: copy-certs-{{.metadata.uid}}
     spec:
       restartPolicy: OnFailure
+      serviceAccountName: registry-secret-manager
       containers:
         - name: copy-certs-{{.metadata.uid}}
           image: amouat/copy-certs-auto
