--- a/k8s/copy-certs.yaml
+++ b/k8s/copy-certs.yaml
@@ -8,6 +8,7 @@ spec:
       name: copy-certs
     spec:
       restartPolicy: OnFailure
+      serviceAccountName: registry-secret-manager
       containers:
         - name: copy-certs
           image: amouat/copy-certs-auto
@@ -15,7 +16,6 @@ spec:
           volumeMounts:
             - mountPath: /etc/docker
               name: cert-dir
-          volumeMounts:
             - mountPath: /hostfile
               name: host-dir
       volumes:
